objects/DropBox__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Need to Store Label and URL values</description>
    <fields>
        <fullName>DropBox_ExternalURL__c</fullName>
        <label>DropBox_ExternalURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropBox_InternalURL__c</fullName>
        <label>DropBox_InternalURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropBox__c</fullName>
        <label>DropBox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DropBox</label>
</CustomObject>